# MonkeyTyper

./: .gitignore  CMakeLists.txt  FontManager.cpp  FontManager.h  Menu.cpp  Menu.h  OptionsMenu.cpp  OptionsMenu.h  README.md  config.json  main.cpp  scores.txt
